--- a/public/index.html
+++ b/public/index.html
@@ -19,9 +19,9 @@
             </ul>
             <div class="toggle" onclick="toggle()"></div>
         </header>
-        <section>
+        <!--<section>
             <video src="./video/production ID-4708370.mp4" autoplay="" muted="" loop=""></video>
-        </section>
+        </section>-->
         <section id="home">
             <div>
                 <h2>ENGINEERING SOLUTION</h2>
