changed design for small device

--- a/public/complete.html
+++ b/public/complete.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Engineering solution</title>
+        <link rel="stylesheet" href="./css/completestyle.css">
     </head>
     <body>
         <h1>your idea is submitted successfully</h1>
